# ZedAuth

./: .env.example  .gitignore  Cargo.toml  README.md  env.example  setup_env.sh
.github/workflows/: ci.yml
.sqlx/: query-1c6542dcd9b641ab285b033d73b7d93e43072095c097a9faa11588f0d1ef5dda.json  query-2bc1afa7bd74fb7c2fa07ca91bbebd1473fe56cd6cbefa83ed33337350d66ce5.json  query-51ba17f40573f8680a8fd2476a24fe87d98ec682d05e926383a9efbd43f326c9.json  query-604b37d3f881b8da6f9e909c43ceafa615d324c46fc49e6d99e7adcfd64bca9d.json  query-64b853bb07274dc065767f7ba4f6323d115f882c653bffb584e734ace6bd2f57.json  query-c43be21ccc3b5c1dca85475b22629a53de4c798cc7d0b40df48f813af51bae30.json  query-d745293559712dbe7210cfbddfc78458ca1c28d1419080ec1e4b7ba2d80d946b.json  query-f19d76e5277ede144d85ad2fd20ae9b2cac90aad360ddea76cade326e172a8fc.json
configuration/: base.yaml  local.example.yaml  production.example.yaml
migrations/: 20250505000000_initial_schema.sql  20260105000000_sessions.sql  20260105000001_session_refresh_reuse.sql  20260105000002_drop_refresh_tokens.sql
src/: main.rs
src/auth/: handlers.rs  mod.rs
src/config/: mod.rs
src/db/: mod.rs
src/users/: handlers.rs  mod.rs  model.rs
