[package]
name = "zedauth"
version = "0.1.0"
edition = "2021"
authors = ["Christopher Peret"]
description = "A high-performance authentication microservice"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.36", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }

# Authentication & Security
jsonwebtoken = "9.2"
argon2 = { version = "0.5", features = ["std"] }
uuid = { version = "1.7", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
dotenv = "0.15"
config = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
