[package]
name = "zedauth"
version = "0.1.0"
edition = "2021"
authors = ["Christopher Peret"]
description = "A high-performance authentication microservice"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1.36", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }

# Authentication & Security
jsonwebtoken = "9.2"
argon2 = { version = "0.5", features = ["std"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
time = "0.3"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
dotenv = "0.15"
config = "0.13"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
